--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,16 @@
 future
-matplotlib==2.2.0
-pubnub==4.0.13
-pyzmq==17.0.0
-python-json-logger==0.1.8
-pandas==0.22
-pandas-datareader==0.7.0
-colorlog==3.1.2
-influxdb
-attrdict
-cython
-numpy==1.16.1
-tulipy==0.4.0
+matplotlib<=2.2.0
+pandas<=0.22
+pandas-datareader<=0.7.0
 chart_studio
 plotly
-yfinance==0.1.36
-zipline
-#==1.3.0
+zipline==1.3.0
+numpy<=1.16.1,>=1.11
 alphalens
 pyfolio
 qgrid
 quandl
 ta-lib
 #------------jupyter
-jupyter-plotly-dash
 jupyter_nbextensions_configurator 
 jupyter_contrib_nbextensions
